[package]
name = "lev-ztarter"
version = "0.1.0"
authors = ["A. Carscadden"]
edition = "2018"

[dependencies]
bincode = "1.2.1"
clap = "2.33.1"
elma = "0.1.14"
rand = "0.7.3"
rand_distr = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
arrayvec = { version = "0.5.1", features = ["serde"] }
